--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "0BSD",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start -c --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -27,9 +27,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.20.0"
   },
   "devDependencies": {
